# agent-zero

./: .env.example  .gitignore  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  ROADMAP.md  STATUS.md  docker-compose.yml  pyproject.toml
.cursor/rules/: docker.mdc  interfaces.mdc  models.mdc  project.mdc  testing.mdc
configs/: default.yaml  game_config.yaml
docker/: entrypoint.sh  start-display.sh
docs/: AGENT_WORK_GUIDE.md  ORCHESTRATION_GUIDE.md  TESTING_STRATEGY.md  target_game.md
src/: __init__.py  cli.py
src/actions/: __init__.py  backend.py  executor.py  keyboard.py  mouse.py
src/cli/: __init__.py  __main__.py  helpers.py  main.py  options.py  runtime.py
src/config/: __init__.py  loader.py  secrets.py
src/core/: __init__.py  decision.py  loop.py  metrics.py  observation.py
src/core/prompts/: __init__.py  decision_prompts.py
src/environment/: __init__.py  auth.py  browser.py  display.py  manager.py
src/interfaces/: __init__.py  actions.py  communication.py  environment.py  memory.py  strategy.py  vision.py
src/memory/: __init__.py  episodic.py  persistence.py  strategy.py
src/models/: __init__.py  actions.py  decisions.py  game_state.py  observations.py
src/observer/: __init__.py  server.py  streaming.py
src/runtime/: __init__.py  recovery.py  targets.py
src/strategy/: __init__.py  goals.py  incremental.py  planning.py  policy.py
src/strategy/adapters/: __init__.py  target_game.py
src/vision/: __init__.py  capture.py  llm_vision.py  ocr.py  ui_detection.py
tests/: __init__.py  test_auth.py  test_backend.py  test_browser.py  test_browser_recovery.py  test_cli.py  test_config.py  test_container.py  test_decision.py  test_decision_policy.py  test_environment_manager.py  test_episodic.py  test_executor.py  test_game_adapter.py  test_game_config.py  test_goals.py  test_incremental.py  test_interfaces.py  test_keyboard.py  test_llm_vision.py  test_loop.py  test_metrics.py  test_models.py  test_mouse.py  test_observation.py  test_ocr.py  test_persistence.py  test_planning.py  test_policy.py  test_runtime_recovery.py  test_runtime_targets.py  test_screen_streaming.py  test_screenshot_capture.py  test_secrets.py  test_strategy.py  test_ui_detection.py
(+3 files in other folders)
